[gd_scene load_steps=4 format=3 uid="uid://hud-scene"]

[ext_resource type="Script" path="res://ui/HUD.gd" id="1_hud"]

[sub_resource type="LabelSettings" id="LabelSettings_default"]
font_size = 20

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="HealthBar" type="TextureProgressBar" parent="Root"]
layout_mode = 1
anchors_preset = 1
anchor_top = 0.0
anchor_right = 0.3
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 380.0
offset_bottom = 40.0

[node name="ManaBar" type="TextureProgressBar" parent="Root"]
layout_mode = 1
anchors_preset = 1
anchor_top = 0.0
anchor_right = 0.3
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 50.0
offset_right = 380.0
offset_bottom = 70.0

[node name="QuestPanel" type="VBoxContainer" parent="Root"]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 220.0

[node name="QuestTitle" type="Label" parent="Root/QuestPanel"]
label_settings = SubResource("LabelSettings_default")
text = "Quest Log"

[node name="QuestList" type="RichTextLabel" parent="Root/QuestPanel"]
fit_content_height = true
scroll_active = false

[node name="Dialogue" type="RichTextLabel" parent="Root"]
layout_mode = 1
anchors_preset = 9
anchor_left = 0.2
anchor_top = 0.75
anchor_right = 0.8
anchor_bottom = 0.95
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
fit_content_height = true
scroll_active = false
bbcode_enabled = true

[node name="Prompt" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 9
anchor_left = 0.4
anchor_top = 0.65
anchor_right = 0.6
anchor_bottom = 0.7
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
label_settings = SubResource("LabelSettings_default")
text = ""
